<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_GearInMultiMaster" Id="{71de8794-92f5-0551-0192-a89646548d8a}">
    <Declaration><![CDATA[{attribute 'pack_mode' := '2'}
TYPE ST_GearInMultiMaster :
STRUCT  
  byAxisIDMaster1  : BYTE; // AxisID of Master1
  byAxisIDMaster2  : BYTE; // AxisID of Master2
  byAxisIDMaster3  : BYTE; // AxisID of Master3
  byAxisIDMaster4  : BYTE; // AxisID of Master4
  GearRatio1       : REAL; 
  GearRatio2       : REAL; 
  GearRatio3       : REAL; 
  GearRatio4       : REAL; 
  Acceleration     : REAL;
  Deceleration     : REAL;
  Jerk             : REAL;  
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>