<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="U_AXIS_STATE" Id="{c53cff5e-cd21-0cf8-1420-2bee9fe694d6}">
    <Declaration><![CDATA[TYPE U_AXIS_STATE :
UNION

  stState             : ARRAY[1..GVL_AXIS_CTRL.gciMaxAxis] OF ST_Out;

{IF defined (AXIS_MAP)}
  {info 'U_AXIS_STATE mapping activated'}
  byState   AT %Q*    : ARRAY[1..GVL_AXIS_CTRL.gciMaxAxis] OF
                        ARRAY[1..SIZEOF(ST_Out)] OF BYTE;
{ELSE}
  byState             : ARRAY[1..GVL_AXIS_CTRL.gciMaxAxis] OF
                        ARRAY[1..SIZEOF(ST_Out)] OF BYTE;
{END_IF}
END_UNION
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>